fixed spinner in welcome, improving font-size of navbar links on small viewport

--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -12,7 +12,7 @@
   padding: 2rem 1rem;
   text-align: center;
   color: white;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 100;
   text-decoration: underline;
   text-underline-offset: 10px;
@@ -21,7 +21,7 @@
 
 /*CONTENEDOR DE LA IMAGEN Y TITULO DEL CONTENIDO*/
 #content figure {
-  width: 300px;
+  max-width: 280px;
   height: 500px;
   margin: 0 auto;
   border-radius: 15px;
