--- a/src/routes/moviesAndSeries/moviesAndSeries.css
+++ b/src/routes/moviesAndSeries/moviesAndSeries.css
@@ -11,7 +11,7 @@
   background-color: #105333;
   color: rgb(255, 255, 255);
   border: 1px solid rgb(255, 255, 255);
-  padding: .5rem 1rem; 
+  padding: 10px; 
 }
 
 
